@@ -5,7 +5,7 @@ use strict;
 use Test::Most tests => 2;
 
 BEGIN {
-    use_ok('CGI::Info') || print 'Bail out!';
+	use_ok('CGI::Info') || print 'Bail out!';
 }
 
 require_ok('CGI::Info') || print 'Bail out!';
