@@ -9,6 +9,8 @@ Revision history for CGI-Info
 	Refactored t/unused.t and t/10-compile.t
 	Fixed Github Actions on Alpine Linux, FreeBSD and OpenBSD
 	Label AmazonBot as a search engine
+	Block directory traversal attacks
+	Set HTTP status to 403 on blocked attacks
 
 0.74	Wed Jan  4 22:16:12 EST 2023
 	Added python-requests/2.27.1 as a robot
